# query

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  hie.yaml  query.cabal
.github/workflows/: experimental.yaml  integration.yaml
src/Data/: Query.hs
src/Data/Query/: Decode.hs  Encode.hs  Evaluate.hs  Function.hs  Generic.hs  Primitives.hs  Resolver.hs  Schema.hs  Shape.hs  Structure.hs  Types.hs  Utilities.hs  Value.hs
src/Data/Query/Decode/: JSON.hs  Types.hs
src/Data/Query/Encode/: JSON.hs  Projection.hs  Types.hs
src/Data/Query/Generic/: Class.hs  Options.hs
src/Data/Query/Primitives/: JSON.hs  OpenAPI3.hs
src/Data/Query/Schema/: Types.hs
src/Data/Query/Shape/: OpenAPI3.hs
